# FileProxy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh
fileproxy/: eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
fileproxy/accounts/: admin.py  authentication.py  forms.py  models.py  tokens.py  urls.py  views.py
fileproxy/accounts/api/: serializers.py  urls.py  views.py
fileproxy/accounts/migrations/: 0001_initial.py  0002_notificationpreferences.py  0003_make_jamin_admin.py  0004_userprofile.py
fileproxy/accounts/templates/accounts/: beta_pending.html  beta_signup.html  profile.html
fileproxy/accounts/tests/: test_api_keys.py  test_user_management.py
fileproxy/accounts/ui/: urls.py  views.py
fileproxy/admin_panel/: urls.py  views.py
fileproxy/api/: urls.py
fileproxy/config/: celery.py  context_processors.py  env.py  settings.py  urls.py
fileproxy/connections/: admin.py  models.py  schemas.py  service.py  tasks.py
fileproxy/connections/api/: serializers.py  urls.py  views.py
fileproxy/connections/migrations/: 0001_initial.py
fileproxy/connections/tests/: test_api.py  test_connections.py  test_schemas.py  test_service.py
fileproxy/connections/ui/: urls.py  views.py
fileproxy/core/backends/: azure_blob.py  base.py  dropbox.py  factory.py  gdrive.py  s3.py
fileproxy/core/tests/: test_base.py  test_factory.py
fileproxy/files/: models.py  serializers.py  services.py  tasks.py  write_cache.py
fileproxy/files/api/: parsers.py  urls.py  views.py
fileproxy/files/migrations/: 0001_initial.py  0002_add_claimed_at.py  0003_alter_pendingupload_claimed_at.py
fileproxy/files/tests/: test_api.py  test_services.py  test_write_cache.py
fileproxy/files/ui/: browse.py  urls.py
fileproxy/static/css/: base.css  files.css  styles.css
fileproxy/static/js/files/: browse.js  (+1 more)
fileproxy/subscription/: admin.py  models.py  service.py
fileproxy/subscription/api/: serializers.py  urls.py  views.py
fileproxy/subscription/migrations/: 0001_initial.py  0002_stripe_fields.py  0002_subscriptionplan_default_exp_idx.py
fileproxy/subscription/ui/: urls.py  views.py
fileproxy/templates/: api_docs.html  base.html  home.html  landing.html
fileproxy/templates/clients/: index.html  windows_explorer.html  windows_mount.html
fileproxy/templates/registration/: login.html  register.html
fileproxy/usage/: models.py  service.py
fileproxy/usage/api/: serializers.py  urls.py  views.py
fileproxy/usage/migrations/: 0001_initial.py  0002_usageevent_bytes_transferred.py
fileproxy/usage/tests/: test_api.py  test_service.py
fileproxy/usage/ui/: urls.py  views.py
fileproxy/vault/: admin.py  models.py  schemas.py  service.py
fileproxy/vault/api/: serializers.py  urls.py  views.py
fileproxy/vault/migrations/: 0001_initial.py  0002_alter_vaultitem_kind.py  0003_alter_vaultitem_id.py
fileproxy/vault/tests/: test_api.py  test_vault.py
fileproxy/vault/ui/: urls.py  views.py
(+180 files in other folders)
