[project]
name = "fileproxy"
version = "0.1.0"
description = ""
authors = [
    {name = "jamin",email = "jaminbecker@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "boto3 (>=1.42.44,<2.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "google-api-python-client (>=2.0,<3.0)",
    "google-auth-oauthlib (>=1.0,<2.0)",
    "google-auth (>=2.0,<3.0)",
    "dropbox (>=12.0,<13.0)",
    "azure-storage-blob (>=12.0,<13.0)",
    "azure-identity (>=1.0,<2.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.0"
bandit = ">=1.8"
schemathesis = ">=3.38,<4.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude = ["*/migrations/*", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["core", "vault", "files", "api", "accounts", "usage", "config"]
